export linkify in index.d.ts

--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "license": "MIT",
   "main": "dist/index.js",
   "types": "index.d.ts",
-  "files": ["dist", "index.d.ts"],
+  "files": [
+    "dist",
+    "index.d.ts"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/tasti/react-linkify.git"
@@ -35,6 +38,7 @@
     "tlds": "^1.199.0"
   },
   "devDependencies": {
+    "@types/linkify-it": "^3.0.2",
     "babel-cli": "^6.26.0",
     "babel-jest": "^22.0.4",
     "babel-plugin-module-resolver": "^3.0.0",
